--- a/index.html
+++ b/index.html
@@ -7,8 +7,28 @@
         <link rel="stylesheet" href="./site.css">
     </head>
     <body>
-      <input type="text" id="isbn"><span class="error" id="inputError"></span>
+      <div id="wrap">
+        <template>
+          <input type="text" @keyup="search" v-model="searchWord" ref="defaultFocus"><span class="error">{{errorMessage}}</span>
+        </template>
+        <template v-if="available">
+          <template>
+            <div>
+              title: <span>{{book.title}}</span>
+            </div>
+            <div>
+              author: <span>{{book.author}}</span>
+            </div>
+          </template>
+          <template>
+            <div>
+              <button>この本がある図書館を探す</button>
+            </div>
+          </template>
+        </template>
+      </div>
 
+      <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
       <script src="./render.js"></script>
     </body>
 </html>
